--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -41,6 +41,9 @@ JoPhA, journal, \LaTeX, paper, template.
   
   Haptic feedback is very important when simulating interactions with rigid objects. When interacting with rigid objects like exploring the edges, surfaces features, etc. visual information is replaced by the sense of touch.  % add some brief literature review about haptics in teleoperation
 
+  % TELEMANIPULATION SYSTEMS AND BILATERAL TELEOPERATION. Highlight bilateral teleoperation using position [Kuchenbecker 2006].
+  
+  
 % GOALS OF THE PAPER
   The motivation behind this paper is to test whether or not the sense of touch improves the user experience in teleoperation. To achieve this, we propose an experiment: teleoperate a robot for playing a board game. The scenario will have two players and one game. One player is located at the game's place while the other is away, teleoperating a robot which is ``physically'' located at that same place. The teleoperation system consists of a Geomagic Touch haptic interface (that acts as a master device) and a Baxter robot (which acts as the slave device). The board game chosen to play is ``checkers'', a strategy game chosen because of its simplicity: all pieces are equal except from their colors and they can only move diagonally forward. With this setup, the user experience is evaluated by defining and measuring some metrics with a group of expert's evaluators.
 
@@ -50,46 +53,74 @@ JoPhA, journal, \LaTeX, paper, template.
 \section{Environment description}
 \label{sec:environment}
 
-% FRAN? + GONZALO?
-
-  A telemanipulation system is comprised of two robots, master and slave, and a communication channel that physically links them. The master allows an operator to send commands to control the slave motion, while the slave robot interacts with the environment by executing such commands. 
+  Any telemanipulation system is comprised of two robots, master and slave, and a communication channel that physically links them. The master allows an operator to send commands to control the slave motion, while the slave robot interacts with the environment by executing such commands. Since the goal of this paper is to test if haptic feedback improves the user experience, the master robot must be a haptic device. To play a board game, the slave robot must be placed in a fixed location and be able to grasp and manipulate objects with precision. Our system is comprised of a Geomagic Touch haptic device and a Baxter robot acting as master and slave, respectively.
+    
+  To perform the experiment, the environment needs to be a place where a board game can be played. The game mechanics must be as simple as posible, so that the user focuses on the manipulation aspects, i.e. grasping the game pieces and moving them along the board. Because Baxter needs a large workspace the game board needs to be big enough; as well as the game pieces, in order to be easily grasped by the robot's end effector. After considering several options ``Checkers'' was selected.
   
-  For this work, the environment needs to be a place where a board game can be played. To simplify the experiment,...
+  So the choosen environment is a room containing two separated tables: one for the Checkers board and one for the operator (see figure~\ref{fig:environment:environment}). The game's table contains the Checkers board and pieces. The operator's table contains the master device and a workstation. To ignore the communication channel time delays both, master and slave, are connected to such workstation through Ethernet cables.
+    
+%GONZALO: SHOULD WE ADD THIS PIC TO ILLUSTRATE THE ENVIRONMENT¿?
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[width=0.45\textwidth]{Images/Baxter&Haptic.jpg}
   
-   The choosen environment is s a room containing a table with a checkers board and another table for the operator. The whole telemanipulation system is located inside such room. The master is a Geomagic Touch haptic device, located at the operator's table, while the slave is a Baxter robot placed in front of the game board's table. To ignore the communication channel time delays, both the master and the slave are connected to the same workstation through Ethernet cables.
+  \caption{Environment used for the experiment.}
+  \label{fig:environment:environment}
+\end{figure}
+
+  \subsection{Master: Geomagic Touch}
+  \label{sec:environment:master}
+
+%GONZALO: I think we should remove this paragraph because this is explained in the introduction.
+%  Haptic feedback takes advantage of the human sense of touch by recreating forces, vibrations   or motions to the user. A haptic device allows to feel a feedback from virtual or real objects and produces a realistic touch sensations to a user. 
+
+  The master device needs to be able to send the operator's movements and commands to Baxter, but at the same time, provide some kinesthetic information to the operator, i.e. reflect the forces or vibrations sensed by Baxter. In the experiment's context, haptic devices capable of force feedback perfectly fits as a master device; particularly, we used a Geomagic Touch haptic device (see figure~\ref{fig:environment:master}).
+    
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[scale=0.5]{Images/BaxterYHapticSmall.jpg}
   
-  % TELEMANIPULATION SYSTEMS AND BILATERAL TELEOPERATION. Highlight bilateral teleoperation using position [Kuchenbecker 2006].
+  \caption{Geomagic Touch haptic device.}
+  \label{fig:environment:master}
+\end{figure}
+
+  The Geomagic Touch is a 6 DOF device, that has 3 actuated DOF associated to the armature which provides the translational movements (X, Y, and Z Cartesian coordinates) and other 3 non-actuated DOF associated to the gimball that gives the orientation (pitch, roll and yaw rotational movements). Also, the device is able to perform a force up to a maximum of 3.3~N within a workspace of 160 (width) $\times$ 120 (height) $\times$ 70 (depth)~mm. These characteristics are more than enough to both, translate the operator's movement using the device's stylus and feel the environment perceived by Baxter using the device's actuators.
   
-\includegraphics[scale=0.07]{Images/baxterHoldingPiece.jpg} 
+  The device is connected to a workstation running Ubuntu 14.04 (Trusty) with ROS Indigo. To communicate the haptic device with ROS, we used the package ``\emph{phantom-{}omni}'' developed by Suarez-Ruiz~\cite{SuarezRuiz12}. However, this package was developed for ROS Hydro, so we adapted it and developed a new teleoperator program to control Baxter.
 
+  \subsection{Slave: Baxter}
+  \label{subsec:environment:slave}
 
-\begin{table}
-\centering
-\begin{tabular}{c}
-\includegraphics[scale=0.25]{Images/baxterCamaraBrazo.jpg} \\
-\includegraphics[scale=0.25]{Images/baxterCamaraBrazo.jpg} 
-\end{tabular}
-\caption{\label{tabla_joints} Corresponding joints between robot and haptic device.}
-\end{table}
+  The slave device needs to mimic the operator's movement and be able to grab or translate the Checker's pieces. For the experiment we used a Baxter robot (see figure~\ref{fig:environment:slave}).
 
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[width=0.45\textwidth]{Images/BaxterDamas1.jpg}
+  
+  \caption{Baxter grabbing a Checkers piece from the board.}
+  \label{fig:environment:slave}
+\end{figure}
 
+%INSERT TECHNICAL DESCRIPTION OF BAXTER
 
-\subsection{Master: Haptic Device}
-Haptic feedback takes advantage of the human sense of touch by recreating forces, vibrations or motions to the user. 
-An haptic device allows to feel a feedback from virtual or real objects and produces a realistic touch sensations to a user. 
-The PHANToM Omni is a 6 DOF haptic device that applies haptic feedback. 
-
-\includegraphics[scale=0.5]{Images/BaxterYHapticSmall.jpg} 
-
-It has 3 actuated DOF associated to the armature which provides the translational movements (X, Y, and Z Cartesian coordinates) and other 3 non-actuated DOF associated to the gimball  that gives the orientation (pitch, roll and yaw rotational movements).  The characteristic of this device allow to offer a feedback up to a maximum of 3.3N.
-
-
-\subsection{Slave: Baxter}
+%...
 Subsubsection text here. 
 
 (Paper de Fran)
 
 (Incluir imágenes articulaciones)
+
+%\includegraphics[scale=0.07]{Images/baxterHoldingPiece.jpg} 
+%
+%
+%\begin{table}
+%\centering
+%\begin{tabular}{c}
+%\includegraphics[scale=0.25]{Images/baxterCamaraBrazo.jpg} \\
+%\includegraphics[scale=0.25]{Images/baxterCamaraBrazo.jpg} 
+%\end{tabular}
+%\caption{\label{tabla_joints} Corresponding joints between robot and haptic device.}
+%\end{table}
 
 \begin{table}
 \centering
@@ -140,7 +171,7 @@ Subsubsection text here.
 %
 %------------------------------------------------
 %
-%Para comunicar los dos nodos (Baxter y Háptico) hacemos que el háptico publique en el topic "geo_touch_right_arm" y en "geo_touch_right_gripper", y que Baxter recoja de los mismos. 
+%Para comunicar los dos nodos (Baxter y Háptico) hacemos que el háptico publique en el topic "geo_touch_right_arm" y en "geo_touch_right_gripper", y que Baxter recoja de los mismos. omni_geo_touch_1
 %El háptico solo publica en el topic "geo_touch_right_arm" si uno de los tres joints que usamos se mueve una distancia mayor de 
 %|0.01|
 %
@@ -175,7 +206,7 @@ It  is  approximated  that  the  three  axese intersect  at  the  wrist despite 
 This is justified due to the relatively short length of this link and the fact that the robot is controlled based on the vision of a surgeon, allowing for intuitive compensation by the surgeon to position the  end  effector.
 This  visual  compensation  is  also  used  to  mitigate  the  effects  of  motor backlash propagation through the robot, although solutions to reduce backlash are being attempted.
 
-\section{Experiment}
+\section{Experiment and Results}
 \label{sec:experiment}
 % SEDANO ? + LAURA Y PABLO?
 
@@ -326,6 +357,10 @@ C.H.~King, M.O.~Culjat, M.L.~Franco, C.E.~Lewis, E.P.~Dutson, W.S.~Grundfest and
 
 \bibitem{Kron04}
 A.~Kron, G.~Schmidt, B.~Petzold, M.I.~Zah, P.~Hinterseer and E.~Steinbach, \emph{Disposal of explosive ordnances by use of a bimanual haptic telepresence system}, In Proceedings of the IEEE International Conference on Robotics and Automation (ICRA 04).\hskip 1em plus 0.5em minus 0.4em\relax pp. 1968--1973, 2004.
+
+\bibitem{SuarezRuiz12}
+%TODO aplicar estilo adecuado a esta referencia
+F.~Suarez-Ruiz, \emph{phantom-omni}, {https://github.com/fsuarez6/phantom\_{}omni}
 
 \bibitem{Munoz12}
 L.M.~Mu{\~{n}}oz, P.~Ponsa and A.~Casals, \emph{Design and Development of a Guideline for Ergonomic Haptic Interaction}, In Human-Computer Systems Interaction: Backgrounds and Applications 2: Part 2, Z.~Hippe and J.L.~Kulikowski and T.~Mroczek, Eds. Springer Berlin Heidelberg, pp. 15--19, 2012.
