Beta 0. The paper has a lot of info that can be removed

--- a/conferences/WAF_2016/Seguridad/waf2016.bib
+++ b/conferences/WAF_2016/Seguridad/waf2016.bib
@@ -1,6 +1,28 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF-8
 
+@article{elminaam2008performance,
+	title={Performance evaluation of symmetric encryption algorithms},
+	author={Elminaam, Diaa Salama Abdul and Kader, Hatem Mohamed Abdul and Hadhoud, Mohie Mohamed},
+	journal={IJCSNS International Journal of Computer Science and Network Security},
+	volume={8},
+	number={12},
+	pages={280--286},
+	year={2008}
+}
+
+
+@article{singh2013study,
+	title={A study of encryption algorithms (RSA, DES, 3DES and AES) for information security},
+	author={Singh, Gurpreet},
+	journal={International Journal of Computer Applications},
+	volume={67},
+	number={19},
+	year={2013},
+	publisher={Foundation of Computer Science}
+}
+
+
 
 @article{rusu2010ros,
 	title={ROS-Robot Operating System},
